fix button shift

--- a/style.css
+++ b/style.css
@@ -41,5 +41,9 @@ button {
 }
 
 button:disabled {
+    font-size: 1em;
+    border: none;
+    margin-top: 0.5em;
     background-color: #000;
+    color: #000;
 }
